--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,5 @@ jobs:
           key: ${{ runner.os }}-sonar
 
       - name: Build and analyze with SonarQube
+        working-directory: journalApp
         run: mvn clean verify sonar:sonar -Dsonar.projectKey=abhaycodez_journalapp -Dsonar.organization=AbhayCodez -Dsonar.host.url=https://sonarcloud.io -Dsonar.login=$SONAR_TOKEN
